resolved jumpiness when messages appear

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ h3 {
     justify-content: center;
     gap: 20px; 
     width: 100%; 
-    margin-top: 30px; 
+    margin-top: 40px; 
 }
 
 #reset-button, #next-round-button {
@@ -153,13 +153,13 @@ h3 {
     text-transform: uppercase; 
     margin: 15px 0; 
     min-height: 1.6em; 
-    display: none; 
     position: relative; 
     top: 6px; 
+    visibility: hidden;
 }
 
 #game-message.visible {
-    display: block; 
+    visibility: visible;
 }
 
 .correct-placement {
